[project]
name = "ptyx-workplace"
version = "0.1.0"
description = "Common workplace for all pTyX-related projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[dependency-groups]
dev = [
    "rust-just>=1.43.0",
]


[tool.uv.workspace]
members = ["ptyx", "ptyx-mcq", "ptyx-mcq-editor", "ptyx-mcq-corrector"]
