[project]
name = "ptyx-workplace"
version = "0.1.0"
description = "Common workplace for all pTyX-related projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ptyx",
    "ptyx-mcq",
    "ptyx-mcq-editor",
    "ptyx-mcq-corrector",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=7.4.4",
    "python-semantic-release>=10.5.3",
    "ruff>=0.9.10",
    "rust-just>=1.43.0",
    "sphinx-autodoc-typehints>=1.19.5,<2",
    "sphinx-rtd-theme>=1.0.0,<2",
    "myst-parser>=1.0,<2",
]

[tool.uv.workspace]
members = ["ptyx", "ptyx-mcq", "ptyx-mcq-editor", "ptyx-mcq-corrector"]

[tool.uv.sources]
ptyx = { workspace = true }
ptyx-mcq = { workspace = true }
ptyx-mcq-editor = { workspace = true }
ptyx-mcq-corrector = { workspace = true }

